--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,5 @@
 serenity.project.name=Dummy API Demo Project
-metafilter=+Scenario_03
+metafilter=+Test1
 environment=default
 serenity.console.colors=true
 serenity.verbose.steps=true
